--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,6 @@ claw.ut.lib.dir=${env.CLAW_BUILD}/cx2t/unit-tests/dist
 sonar.java.test.binaries=${env.CLAW_BUILD}/driver/tests/bin/clawfc-tests.jar,${env.CLAW_BUILD}/driver/ut/bin/clawfc-ut.jar,${claw.ut.lib.dir}/claw-x2t-tatsu-ut.jar,${claw.ut.lib.dir}/claw-x2t-wani-ut.jar,${claw.ut.lib.dir}/claw-x2t-shenron-ut.jar
 sonar.java.test.libraries=${sonar.java.libraries}
 sonar.java.source=1.8
-
-
+sonar.dynamicAnalysis=reuseReports
+sonar.core.codeCoveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=${env.CLAW_BUILD}/test-reports/*.jacoco.xml
