Sonar source path fix

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=CLAW XcodeML to XcodeML Translator
 sonar.projectVersion=2.0.1
 sonar.organization=claw-project
 sonar.host.url=https://sonarcloud.io
-sonar.sources=${env.CLAW_SRC}/cx2t/src/claw/,${env.CLAW_SRC}/driver/src/
+sonar.sources=${env.CLAW_SRC}/cx2t/src/,${env.CLAW_SRC}/driver/src/
 claw.lib.dir=${env.CLAW_HOME}/share/claw
 sonar.java.binaries=${env.CLAW_HOME}/bin/clawfc.jar,${claw.lib.dir}/claw-external-set.jar,${claw.lib.dir}/claw-x2t-shenron.jar,${claw.lib.dir}/claw-x2t-tatsu.jar,${claw.lib.dir}/claw-x2t-wani.jar
 sonar.java.libraries=${env.CLAW_BUILD}/cx2t/3rdparty/dist/*.jar,${env.OMNI_HOME}/share/*.jar
