--- a/cx2t/unittest/CMakeLists.txt
+++ b/cx2t/unittest/CMakeLists.txt
@@ -6,7 +6,7 @@
 # Configure files depending on a path
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/helper/TestConstant.java.in
-  ${CMAKE_CURRENT_SOURCE_DIR}/helper/TestConstant.java
+  ${CX2T_UT_GEN_SRC_DIR}/helper/TestConstant.java
   @ONLY
 )
 
@@ -17,61 +17,33 @@ if(NOT OFFLINE)
     TARGET claw-ut-init
     COMMAND ${Ant_EXECUTABLE} -f ${CMAKE_CURRENT_SOURCE_DIR}/build.xml
     ${ANT_FLAGS}
-    -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
-    -Ddist.dir=${CMAKE_BINARY_DIR}/build
+    -Dclaw.properties.dir=${CX2T_PROPERTIES_DIR}
     init
     COMMENT "Resolving dependencies for the build"
   )
-endif()
-
-# Add target for the compilation of JUnit test cases with ANT
-add_custom_target(claw-ut ALL)
-add_custom_command(
-  TARGET claw-ut
-  COMMAND ${Ant_EXECUTABLE} -f ${CMAKE_CURRENT_SOURCE_DIR}/build.xml
-  ${ANT_FLAGS}
-  -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
-  -Ddist.dir=${CMAKE_BINARY_DIR}/build
-  ${DISABLE_RESOLVE}
-  COMMENT "Building CLAW XcodeML/F to XcodeML/F unit tests"
-)
-if(NOT OFFLINE)
-  add_dependencies(claw-ut claw-ut-init)
 endif()
 
 # Add test cases
 add_test(
   NAME junit-tatsu
   COMMAND ${Ant_EXECUTABLE} -f ${CMAKE_CURRENT_SOURCE_DIR}/build.xml
-  -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
-  -Ddist.dir=${CMAKE_BINARY_DIR}/build
-  -Dtest.reports=${CMAKE_BINARY_DIR}/reports
+  -Dclaw.properties.dir=${CX2T_PROPERTIES_DIR}
   ${DISABLE_RESOLVE}
   junit-tatsu
 )
-set_tests_properties(junit-tatsu PROPERTIES
-ENVIRONMENT CLASSPATH=${ASM_BUILD}:$ENV{CLASSPATH})
 
 add_test(
   NAME junit-shenron
   COMMAND ${Ant_EXECUTABLE} -f ${CMAKE_CURRENT_SOURCE_DIR}/build.xml
-  -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
-  -Ddist.dir=${CMAKE_BINARY_DIR}/build
-  -Dtest.reports=${CMAKE_BINARY_DIR}/reports
+  -Dclaw.properties.dir=${CX2T_PROPERTIES_DIR}
   ${DISABLE_RESOLVE}
   junit-shenron
 )
-set_tests_properties(junit-shenron PROPERTIES
-ENVIRONMENT CLASSPATH=${ASM_BUILD}:$ENV{CLASSPATH})
 
 add_test(
   NAME junit-wani
   COMMAND ${Ant_EXECUTABLE} -f ${CMAKE_CURRENT_SOURCE_DIR}/build.xml
-  -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
-  -Ddist.dir=${CMAKE_BINARY_DIR}/build
-  -Dtest.reports=${CMAKE_BINARY_DIR}/reports
+  -Dclaw.properties.dir=${CX2T_PROPERTIES_DIR}
   ${DISABLE_RESOLVE}
   junit-wani
 )
-set_tests_properties(junit-wani PROPERTIES
-ENVIRONMENT CLASSPATH=${ASM_BUILD}:$ENV{CLASSPATH})
