--- a/cx2t/CMakeLists.txt
+++ b/cx2t/CMakeLists.txt
@@ -1,11 +1,12 @@
 # This file is released under terms of BSD license
 # See LICENSE file for more information
 
-if(OFFLINE)
-  set(DISABLE_RESOLVE "-Doffline=true")
-endif()
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/claw.properties.in
+  ${CX2T_PROPERTIES_DIR}/claw.properties
+  @ONLY
+)
 
 add_subdirectory(src)
 add_subdirectory(unittest)
 
-add_dependencies(claw-ut claw-cx2t)
