--- a/cx2t/ivy.xml
+++ b/cx2t/ivy.xml
@@ -1,6 +1,7 @@
 <!--
  This file is released under terms of BSD license
  See LICENSE file for more information
+ @author: not specified
 -->
 
 <!-- Dependencies for CX2X -->
@@ -11,10 +12,15 @@
   <info organisation="claw" module="claw"/>
   <dependencies>
     <dependency org="commons-cli" name="commons-cli" rev="1.3.1"/>
-    <dependency org="org.antlr" name="antlr4" rev="4.7"/>
+    <dependency org="org.antlr" name="antlr4" rev="4.8-1"/>
+    <dependency org="org.antlr" name="antlr4-runtime" rev="4.8-1"/>
     <dependency org="junit" name="junit" rev="4.12"/>
     <dependency org="net.consensys.cava" name="cava-toml" rev="0.3.1"/>
     <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.8.2" />
     <dependency org="org.ow2.asm" name="asm" rev="6.2.1"/>
+    <dependency org="net.sourceforge.argparse4j" name="argparse4j" rev="0.8.1"/>
+    <dependency org="ant-contrib" name="ant-contrib" rev="1.0b3"/>
+    <dependency org="org.glassfish.jaxb" name="jaxb-runtime" rev="3.0.0-M5" conf="default"/>
+    <dependency org="org.glassfish.jaxb" name="jaxb-xjc" rev="3.0.0-M5" conf="default"/>
   </dependencies>
 </ivy-module>
